# Glass

./: .gitignore  CMake.txt  CMakeLists.txt  README.md
docs/: glass cleaning company list.docx  glass cleaning company list.odt
images/: temporal averaging.7z
include/: cnn.hpp  glass.h  glass.hpp  readFile.h  rwFile.h  rwFile.hpp
source/: cnn.cpp  main.cpp  readFile_0.cpp  readFile_1.cpp  rwFile.cpp  test.cpp
